
[tool.poetry]
name = "python-reporter-testsuite"
description = "An example testsuite for all supported Applause Python SDK test runners"
readme = "README.md"
version = "1.0.0"
authors = ["Applause"]
homepage = "https://github.com/ApplauseOSS/pytest-applause-reporter"
license = "LICENSE"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.group.dev.dependencies]
applause-common-reporter = {git = "https://github.com/ApplauseOSS/common-python-reporter", rev = "dev"}
pytest-applause-reporter = {git = "https://github.com/ApplauseOSS/pytest-applause-reporter", rev = "dev"}
pytest = "^8.3.2"
ruff = "^0.6.4"
tox = "^4.18.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"